test/good/nullables/nullable04.px

for x in [4.0, null, -3.5] do
    print x
