test/bad/loops/for1.px

x = 'x'
for x in 0..3 do
    skip
